Adding script.js

--- a/guess-the-number-game/index.html
+++ b/guess-the-number-game/index.html
@@ -20,12 +20,13 @@
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
-        <p>Start guessing...</p>
-        <p class="label-score">Score: <span class="score">20</span></p>
+        <p class="message">Start Guessing...</p>
+        <p class="label-score">💯 Score: <span class="score">20</span></p>
         <p class="label-highscore">
-          Highscore: <span class="highscore">0</span>
+          🏅 Highscore: <span class="highscore">0</span>
         </p>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
