Adding script.js

--- a/02-first-ui-component/index.html
+++ b/02-first-ui-component/index.html
@@ -22,6 +22,8 @@
         aspernatur.
       </p>
     </div>
-    <div class="overlay hidded"></div>
+    <div class="overlay hidden"></div>
+
+    <script src="script.js"></script>
   </body>
 </html>
