--- a/DOM/00-learning-dom-manipulation/index.html
+++ b/DOM/00-learning-dom-manipulation/index.html
@@ -7,6 +7,9 @@
     <title>DOM Manipulation</title>
   </head>
   <body>
+    <div class="Hi">
+      <span>Hi</span>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
